# openmp-mpi-examples

./: .gitignore  README.md
hello/mpi/: README.md
hello/mpi/cxx/: hello.cxx
hello/openmp/: Makefile
hello/openmp/c/: hello.c  hello_local.sh
hello/openmp/cxx/: Makefile  hello.cxx
mpi/hello/: README.md
mpi/hello/c/: CMakeLists.txt  Makefile  hello.c  hello_local.sh  hello_local_output.txt
mpi/hello/cpp/: CMakeLists.txt  hello.cpp  hello_local.sh  hello_local_output.txt
mpi/prime/c/: CMakeLists.txt  Makefile  prime.c  prime_complete.c  prime_local.sh  prime_local_output.txt
mpi/quad/c/: CMakeLists.txt  Makefile  quad  quad.c  quad_local.sh  quad_local_output.txt
openmp/hello/c/: CMakeLists.txt  Makefile  hello.c  hello_local_output.txt
openmp/hello/cpp/: CMakeLists.txt  Makefile  hello.cpp  hello_local_output.txt
openmp/learn/: README.md
openmp/learn/arrays/: CMakeLists.txt  Makefile  array_evenodd_count.c  array_factorial.c  array_linear_search.c  array_min_max.c  array_squares_cubes_sum.c  array_sum.c  operation_on_array.c
openmp/learn/clauses/: CMakeLists.txt  firstprivate_clause.c  lastprivate_clause.c  private_clause.c  shared_clause.c
openmp/learn/construct/: CMakeLists.txt  atomic_construct.c  critical_construct.c  master_construct.c  ordered_construct.c  sections_construct.c  single_construct.c  workshare_construct.c
openmp/learn/matrices/: CMakeLists.txt  matrix_sum.c
openmp/learn/sorting/: CMakeLists.txt  bucket_sort.c  merge_sort.c  selection_sort.c
openmp/quad/c/: CMakeLists.txt  Makefile  quad.c  quad_local.sh  quad_local_output.txt
quad/openmp/: quad_complete.c
